k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  namespace: microservices
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 9191
          - path: /eureka
            pathType: Prefix
            backend:
              service:
                name: eureka-server
                port:
                  number: 8761
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
